Tilesets can now be correctly loaded and saved. Added "blank unused tiles" button.

--- a/editor/Form1.resx
+++ b/editor/Form1.resx
@@ -124,40 +124,79 @@
     <value>347, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonCopyTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonSaveTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ6SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
-        xpgQi6HxoyiNsMUKatTErWxMlI0WJUA/oC2lBZSUlifpUNpOgXbm0WJnpnO8byhsCp7k5C3mvt/ce95t
-        anMGx7vdkWjPUITZh+eTwj1D88n2wVDsQr//fvPNqVNN/9M1dyim63oyz3Umk3OqzqSCxiRVY0NemXW5
-        F9+fu/PlTL28UfYX4bUCXfSnDjyTqrKJZc54VWe+tMY8Pwrs4pPZgXp5ozoG55MlAkTSZElANDaZ4CyV
-        56zANcb/6uzW6EKqXt4oAVAIsESX42QB8lEXH2ZljE1t4aV30/K9j/Hy7Xexyo1X4bUWp+/p+d5Pp48A
-        KgFW6LKwgISoi7GfGZgA8rwGmZxTDUhFDVlVw7BXRrc7+rX57vjZoxEOAcJiFA/9dadsws8MBDd0UDaY
-        WC6DV01QNvBMb+PSoxnP0QiJvM6S8sEpIKLtUsXEQtrAgmRg7o+GycQ+1vNlUDagbNDlem1aAPEKxwGU
-        fRNLGQPxTQOUDXzrVXhXK/gc59ikca673hLAFWGSUmgAjBBA3Qd+ZU3L8UwNoQ0NPla1OsmqNfQIQPvj
-        4LLoIKfQ8pQ0lldooWiZRr7TCBYA+J2tYWWrhhh1EpZEHhpy3IRdAK44A9+uOueiNkdgvfVBYOXQne4Q
-        jQAk8kBSPjhXCbaUAcJpWN+6XW9M6ymPU+dgRN8t6ycCihWdANTBSep6voisUjwRkFOLsD+Lol7eqMv9
-        wZ1tboCyQbakgbIBZWO5QN7dq6F5YKpaL29US+/sdEtfYMvWN2raHEFuc8yRxRnkbX3+vVbHTK7jYUj5
-        ByXyobYdcMgFAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKsSURBVDhPjZJZTxNRHMX7hXygG4rxW/hoDFuhCxBARDaN
+        Jj6oESQajSyCUsIqigJt6QAaFKFQsWAwhVJoC6Ut0JXSKd2O/7lVnghhkpObmbnnd85dRHI1VyVTc61S
+        DWcmBeQaQ0Ku0WfkGg70j+lK2RSuVkwjr5xDbqk+eK2CW5KodddFwiNXcR0rjhhWHDziyQx4UuwkjdBx
+        CvuhBPyRJHvnE2kchJOwuaOZSYs3efPx3KFcNV4kkmuM1pXtGO4P+RBLkJkmFj9dQOAoiX0yRGIpBg7T
+        6Do8gc0Th9ESwLTlEHmVXJwAUyELAe4NeNkkQQLAF04gEE2yZKGBl9rYvXHY9ng0aJ34thaETDWWIYAh
+        YbYfE8DDJgkqaTbBR+NRPI04tQpGU9j2Cek81t086nocGJz1QKbUgQD6jGkzirv9HjipoqAd/wmlp1j6
+        EZ+G2584NVvdMdx5u4XemV1IS8cFAIf5dQL07bHqCkovbTGh7PkSykmq1kUo6Lvw779qOjfQbXRCWjJG
+        ADqmOWsEjb07tDYSjY29LjRqBTlR3+OkxG3Udm+hpsuO6k4bat5son3CDqniUxYwuxbJmklZI4kggrnu
+        nYNVvt1FADLe6tggrePl6AYkxR+zgJnVEJld/+Q8TWdmSq7ttjNzNRmr2qyobPuDluE1SIpGBIARnCWI
+        hh4XO++LqPzVbzzpX4W4cBiiy7SJhuUgq8vTkT36WniuhDuhfvELD7XLEBcMEaCMg84coAZZwOzml3Ml
+        AJStP/Ggy0yAAYhyNbrM2KKfAI4LN1A0L6Kpw4ScfG1GJFYat0Z+HGBkbv/M9Z6lpvYF1L+eR84NrV8k
+        U00+k6kME1KFISBT6ul6TrAbJi35DIlilI7qA8RF72nDhqjyIKUOsORL+X3hnIK+738BDH0Re5eFLq0A
+        AAAASUVORK5CYII=
 </value>
   </data>
-  <data name="buttonPasteTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonLoadTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ5SURBVDhPfZLdS1NhHMelP2Tzoqsuuuim65xbcyvnHKw5
-        YnTOcelBM0NWENEKZo5jLET3EubL0GVpCLo3IkLoooiwtXyZc0utRJ2O9uKFNshv5zzbnG/1gw/ngfN8
-        P7/fec5TViwnJTrjYspxFAclShe2nFyua6JzDko8KWweNp3HXiqA7dgDgrB2t5wlIidV7nHQIk0hVioX
-        I1qJTtzaW526j+W+avz55Ud61kQQ1ku9Sqz4WrDsbfrtosTbhVipBPvqlBlLkywWexWIOysRd0h4KhC3
-        VyBmv4D5fjX/vplMUoiVigje3sO3cSPiYzQWXxgQHbl6iMhALRaG6H8Lfr65i9gohahHj8ighgSO8l/B
-        j9e3SaeFYR0RzPVr8LKTgttaD3dHPQYfMRjoYPGwUQGWZbmGhgbOaDRyFEUxRPA92IbI0JV8uK8Goae1
-        eNVjwu7uLrLZ7DEymYzwzBkMBgsRrPhbyZjzz2ow66rGtF2F0a42sjEYDCIQCOzj9/sJyWQyp9fr84Jl
-        7w3M8eEZPhzuUeJT1yWM2FqJIJFIEDY2NvZZX1/H1tZWTqvV5gVLE02YcV7G124lvjyR4+NjBTydN4ng
-        YFefz7ePINBoNHlBfJxFuFtBwp87ZfhgvYghazPS6fShrgcRBCqVqiAYa0TIlg9Pd0jw3lIJd3sjERzs
-        WsTr9RKBUqnkBbT4XcQjXCAjos/r+V9JIzxAY9hmQiqVOtZ5bW2NsLm5mauqqrKUORmxwkmXh4RJitiZ
-        07C26bCzs0OmOAn+fHJSqdRSuE6Hy2w2n6qrq7uj0+k4/qA4tVrN8d/L8SNzfFdOLpdzMpmMk0gk1/8C
-        uA1mZfOgo0QAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALCSURBVDhPfZHtS1NxFMfvX9OL7MlEI3oRgVTSCyEWhQ/5
+        NF9oEmkSGeK2wAcqRuI06EnMVHRTEY3UyJBeVGY624PbHNOpm1M3t3vvdu92d3e//e4cshA9/D78fhzO
+        93vO4UcdFRWqkZtKzchWpWYESs0olGoZ8k5HNdyVKj8cZZqhiNPlAsOyYMM8GEKAiWI3CQ/fHg3SBKny
+        wyF3oBkWhepOqPqmD3g68IV01mKH5lHWNHy8gdxZ3fsJBieDUVcEY24B4xsiWoe+whfkUdJoONqgXDUM
+        mhjIxRMeCRObiQPk3FaQQ9ETPSjrRJbRPVMgrH8rSqNQkMcLkF1vNfWhbtCVpLbfmUTR2AtvgMOdx4PE
+        YDQnKkkJABI5Mvvvu2Q8P9nztkaPeoPnP+Schxgo6gdkg+yQJPKIbmoRcbUjstYNzm1AQcMQ/CEeV8rU
+        SUE6cs7j55Bf2wfK0X+eSQg0EesQdnaAsWgQmKuGSa/AxpQS7slyQincn0sIxVgdK4BlspTz+HncuN9L
+        DPTZQpzzIWjWYW+hDduzD8Ft/4J9dR1CjEFcYAnkjtGEEOJiAq7p0ph3JyBer/4QIBNcEJL7J6IEDhAj
+        kEQWns0lWBdewTT3Aks/1DB+r8fi7D1YlucxrcuLXa3q3s2t6rlMOd7lxCSRg8j8RDw4BcFvQMz3FvzG
+        c3BrjeCcNYjYixG25oM15UJkjbC+yeRTv01R1tc50QQZUQiMI7b9EVFvJ/j1ZnCuR4isVCK8fBusOQ/M
+        0iXQC+cQZ+Zh1aUbvMzkJSFIxD2IetrBuzVEXIeIo4KIFaTrNTDGi6D/nEHo9wliMAdZk5JTlP3ZWS8X
+        soVC9oFEeOU9WEcXWJsW7HILGLMKjKkB9N860MYa0ItVCHtnJIs2K5SSU5StJeOBre1Uv7n15I657TR/
+        LK3Jm7Y1Z3TsqynqHx9roEzWajRpAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="buttonBlankUnusedTiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIwSURBVDhPrZHdS1NxGMf3B3TfVRdykFHTmUSpa3P2IskI
+        JKgIuouuQ6JuIlIwomZJUVAKQbgapmKFNqwUllRzbU7R2ZxnL2fOvZydzZ3t7OQ5Un37bZ2bMbAFfa5+
+        PL/v8zzf53lU/5W0p22IcxuRcrWCderBOg4j+UmHxGwz4vZDiM0cxMaHA4jYtBElpZyk0/hzOzMImRuA
+        nHwMKfYIW+sP8D3cD5HuA+c4C+Zto6DIy+Hcrb05/0Vsc4MorHZAWD6OnMcIfk4HMXAXGdcFMFPaH4q8
+        EtZhkGX2IbYilyF425H3HAFPxhADZmQXu4h1A7GuoRR5Oeyc/nTWex5yagCFbyeQXzwK3mWAsHIJgq8b
+        CbsJ4Yn9JkVeCfu5pSBGeiDF+yEsHUNu3oiso6VkPfXlHJhJ7RVFWknCoW9Kz3dCZp+QjibkFtrBf23D
+        Jtl8wX8HoTfaX8x4nRQe1Uihl3ulgFUt0ZZayWeh2FKB5Ecdm1+7SrqT+aNk48y90twibUbBdxv55Zuk
+        aDd493VkndcQnezAqoUS157t+bOP2GwzT24skRtL5MZSdKpRWp9okATfLXC2BqSniStPD+LvTiE4XAf/
+        EPW0lLgTzOt6+6a7C/mlXpJ8Axs2E+gXNbmgtWa3ItmZ8CtNyXpi5gxCI1rQz6n7ytffCYxpFhLTnYi/
+        P1lMzFTdtYh3ZN+u8Hg9QqMa0FbKrISrJzimXvEPq9liISX0b/ittU3Ks0pUqt/8EnJl9IrboQAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>242, 17</value>
+  </metadata>
+  <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Index.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Solidity.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Foreground.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Used.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="UsedGlobal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -237,35 +276,35 @@
   <data name="buttonCopyFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ5SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
-        xpgQi6HxoyiNsBSKbMTErWxMlI0WJUA/oC2lBZSUlidpKe1MgXbm0WJnpnO8byhsCp7k5C3mvt/ce95t
-        anMGJ7vdkWjPUITZhxeTwj1Di8n2wVDsSr//cfPdmXNN/9Mtdyim63pS4jqTyXlVZ5mCxjKqxoa8Muty
-        L09cevDlQr28UfY34Y0CXfSnjjyXqrKpVc54VWe+tMY8Pwrs6ov5gXp5ozoGF5MlAkTS5IyAaGw6wVlK
-        4qzANcb/6uzeu6VUvbxRAqAQYIUux8kC5KMuPszLGJ/Zwah32/Kjj/Hy/fexyp2x8EaL0/fycu+n8ycA
-        lQBrdFlYQELUxfjPLEwAEq9BJudVA5mihpyqYdgro9sd/dr8cPLiyQjHAGExiof+ulc24WcGgls6KBtM
-        rZbBqyYoG3hmd3Ht2ZznZISEpLOkfHQKiGi7VDGxlDawlDGw8EfDdOIQm1IZlA0oG3S5Rk0LIF7hNIBy
-        aGIlayC+bYCygW+zCu96BZ/jHNs0zm3XGAFcEZZRCg2AEQKoh8CvnGk5nq0htKXBx6pWJzm1hh4BaH8e
-        XBUd5BVanpLGJIUWipZp5DuNYAGA37ka1nZqiFEn4YzIQ0Oem7ALwA1n4NtN50LU5ghstj4JrB270x2i
-        EYCEBCTlo3OdYCtZIJyG9a3b5TGtpzxNnYMRfb+snwkoVnQCUAdnqev1MnJK8UxAXi3C/iqKenmjrvcH
-        93a5AcoGuZIGygaUjeUCef+ghuaBmWq9vFEtvfOzLX2BHVvfW9PmCHKbY4EsziBv6/MftDrm8h1PQ8o/
-        +yyhk7JGuNIAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ7SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
+        xpgQi6HxoyiNsDAqVtmoiVvZmCgbLUqAfkBbSgsoKS1P0qG0MwXamUeLnWnneN9Q2BQ8yclbzH2/ufe8
+        29TmDI51uyPRnqEIsw/PJYV7huaS7YOh2Ll+/93m65Mnmv6nK+5QzDCMpMwNppBzmsGkvM4kTWdDXoV1
+        uRfen7n15VS9vFH2Z+HVPF30p/Y9naqw8SXOeMVgvrTOPD/y7PyjmYF6eaM6BueSRQJE0mRJQHQ2keAs
+        JXOW5zrjfw124+18ql7eKAFQCbBIl+NkAfJRFx9mFIxObuK1d8PynY/x0s13sfK1N+HVFqfv8dneTycP
+        ARoBlumysICEqIvRnxmYAGReg0LOaVVIBR1ZTcewV0G3O/q1+fbY6cMRDgDCYhQP/XW7ZMLPqgiuG6Bs
+        ML5UAq+YoGzgmdrChQfTnsMRErLBksr+KSCi7WLZxHy6inmpitk/OiYSe1iTS6BsQNmgy/XCtADiFY4C
+        qHsmFjNVxDeqoGzgW6vAu1LG5zjHBo1z1fWKAK4Ik9R8A2CEANoe8CtrWo5nagit6/CxitVJVquhRwDa
+        HwaXRAc5lZanqDNZpYWiZRr5TiNYAOB3toblzRpi1ElYEnnoyHETdgG45Ax8u+ycjdocgbXWe4HlA3e6
+        QzQCkJCBpLJ/rhBsMQOE07C+dbtemtZTHqXOwYixUzKOBRTKBgGog+PU9XQBWbVwLCCnFWB/EkW9vFEX
+        +4PbW7wKygbZog7KBpSN5Tx5Z7eG5oHJSr28US29M1MtfYFNW99z0+YIcptjlizOIG/r8++2OqZzHfdD
+        6j/ZAKF3SiUvdwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="buttonPasteFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbAy666qKLbrpOlBBKRDZD
-        VtQ5QECZ2Ri1tRa1UbJjo5wiNFNkQJY2t+RtrTW3LmqtGZkv+EJKJQg38eKF1JbfzvmBiC/1bJ/tt53n
-        +3mec86vZqucFO+ISyPAbh6dO5grt+xfrgu8Y30Uf5xr9pmPYzMbxvrSHQJ39rQfJSInJfD30TxFObZd
-        Ls2hhM9ybXN14jZWBhrx52cIuRkzgTsv90uRCLZjJXDpl+s8f70c2y7OvjphwfK4EYv9EsSddYj3CVlq
-        EXfUYslxAnODcvZ5G9mkHNsuInhzC1/HdIiP0lh8psbC8NkdxNzNmPfS/xb8eH0TSyMUFvwqxIYUJLCb
-        /wq+v7pOJs37lEQwO6jA8y4KHpsWnk4thu5r4O404q5BAqPRyOj1ekan0zEURWmI4FvEhJj3TCk80ITo
-        42a86DWjWCyiUCjsIZ/PI5lM/lar1VYiSIQ6yJpzT5ow42rEpEOGkW4TaYxEIgiHwxVCoRCBE6hUqpJg
-        JXAFs2x4mg1P9UrxsfsUhu0dRJDJZAjpdLrC2toaEbS0tJQEyy8vY9p5Gl96pPj8UIwPDyTwd10lguqp
-        wWCwAidQKBQlQXzMiKkeCQl/6hLhve0kvLY25HK5HVOr4QQymawsGDUgai+FJzuFeGetg+eegQiqp24R
-        CASIQCqVsgKa/zbm5y6QDgtPteyvpDHlpuGzm5HNZvdMTqVSBE7Q0NBgrXFq+BInLYhym2zh0ByGzaTE
-        xsYG2WI/OEF9fb21fJ12lsViOdDa2npDqVQy7Idi5HI5w74vw67MsFMZsVjMiEQiRigUXvwLI0RlM6Wl
-        OsQAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbAy666qKLbrpOlBBKRDZC
+        VtQ5QHjKzOaorbWojYIdG+UUoZkvDMjS5pa8rbXm1kWtNSPyBV8IqUT0JlAvsLb8ds6PF0WtZ/tsv+08
+        38/znHN+VaVyUYIjbr0Iu3l07mCu2LJ/uS8IjvVQwjG+2Wc+jq1sGBsLdwj82dN6lIhclMjfQwtUxdh2
+        ufWHUoOWa1tL47ex2FePPz9DyE2ZCfw52StHKtiKxcClX+7zwo1ibLt4+9K4BckxBvO9MiRcNUj0iDmq
+        kXBWY8F5AjP9Su55C9mkGNsuInhzC19HjUiM0Jh/psPc0NkK4gONmPXS/xb8eH0TC8MU5vxaxAdVJLCb
+        /wq+v7pOJs36NEQw3a/C8w4KHrsBHpsBg/f1GLAxuNssA8MwrMlkYo1GI0tRlJ4IvkXaEfeeKYT7GhB9
+        3IgX3WZsbm5ifX19D2tra0in0791Op2VCFKhNrLmzJMGTLnrMeFUYLiznTRGIhGEw+EyoVCIwAu0Wm1B
+        sBi4gmkuPMmFY91yfOw8hSFHGxGsrq4SVlZWymQyGSJQq9UFQfLlZUy6TuNLlxyfH0rx4YEM/o6rRLBz
+        ajAYLMMLVCpVQZAYZRDrkpHwpw4J3ttPwmtvQS6Xq5i6E16gUCiKgpFmRB2F8IRNjHfWGnjuNRPBzqkl
+        AoEAEcjlck5AC9/G/fwFMmLuqYH7lTRiAzR8DjOy2eyeycvLywReUFdXZ61y6YUyFy2K8puUcOoPw96u
+        QT6fJ1vsBy+ora21Fq9TZVkslgNNTU03NBoNy30oVqlUstz7stzKLDeVlUqlrEQiYcVi8cW/FSBlL+qM
+        7EIAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
