--- a/editor/Form1.resx
+++ b/editor/Form1.resx
@@ -123,56 +123,62 @@
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>347, 17</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>242, 17</value>
+  </metadata>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>347, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonSaveTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVDhPjZJZTxNRHMX7hXygy+ASv4WPxrAVugABRGTT
-        aOKDGlmi0cgi1RZZRZHdDqCpIhQqthhMWUoXhFKgK9Ap3Y7/uVWeCGGSk5uZued3zl0knIYvV2j4ZrmW
-        t5ACnHYozmkNaU7Lg/4xXSqexJXSKVwu4ZFdNB68WsovyDRj1yTiw6n5NpsrCptLQCyRhkCKHqcQOkpi
-        NxSHP5Jg70I8hb1wArM2V/qt1Zm48ci0z6lH8iWc1mi3OaO41+dDNE5mmljwZA6BgwR2yRCJJhk4TKNn
-        /xhr3hiM1gCmrPvgyvgYASZDVgLc7dlhk0SJAF84jsBhgiWLDXaojWMnhrVtAbUGN74uB6FQ69IEGIpb
-        HEcE8LJJogobzPDReBBLIUatgodJOH1iuoCVLQHVehd6TV4oVGMggCFtXj/EnW4v3FRR1Kb/mNKTLP1A
-        SGHLHz8x27eiuP16A53TfyAvGhEBPGZXCNC1zaorKb2o0YzipwsoIamb56Gk7+K//6psX4XO6Ia8cJgA
-        dEwz9gjqOjdpbSQa6zo9qDOIcqNG76ZEJ6p0G6jscKCifQ2Vr9bROuqAXPkxAzAtRzJmUsZIIohorn7j
-        YpVvdRCAjDfbVkkreD64ClnBhwxgeilEZs8/uU/SmZmSq3QOZq4gY3mLHWUtv9HYvwxZ/oAIMIK3BlGr
-        97DzPo9KXvzC4+4lSPP6IblImzixGGR1BTqyh1/yzpR4JzTPfuKBYRHS3D4CFPMYswSoQQZgWv98pkSA
-        qvkH7ndYCNADSbZWnx6e9xPAde4GyoZ51LeZkZXTlJZIVcaNge97GJjZPXW9p6m+dQ41L2eRdV3vlyjU
-        n5oU6olRee5EQKEap+s5ym6YvHAIMuUgHdV7SPPf0Yb1UeVeSu1hyRdyusJZuV3f/gKpnRCSkpRzOAAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVDhPjZJZTxNRHMX7hXygy+ASv4WPxrAVugABRGTT
+        aOKDGkGi0chikdKwiiK7HUBTZSlULBhMWboilAJdgU7pdvzPrfJECJOc3MzMPb9z7iLhNHy5QsM3ybW8
+        hRTgtENxTqtPc1oe9I/pSvEkrpVO4WoJj+yi8eD1Un5Rphm7IREfTs23LruiWHYJiCXSEEjRkxRCx0ns
+        heLwRxLsXYinsB9OYNbqTBuszsStJ6YDTj2SL+G0RtuyM4oHfT5E42SmiQXP5hE4TGCPDJFokoHDNHoO
+        TrDhjcFoDWDKegCujI8RYDJkJcD9nl02SZQI8IXjCBwlWLLYYJfa2Hdj2NgRUNvpxrfVIBRqXZoAQ3GL
+        /ZgAXjZJVGGDGT4aD2MpxKhV8CgJp09MF7C2LaBa70KvyQuFagwE0KfNm0e41+2FmyqK2vKfUHqSpR8K
+        KWz746dm23YUd985YJj+A3nRiAjgMbdGgK4dVl1J6UWNZhS/WEQJSd20ACV9F//9V2XbOtqNbsgLhwlA
+        xzRji6DOsEVrI9FYZ/CgrlOUGzV6NyU6UdXuQKXOjoq2DVS+3UTLqB1y5acMwLQayZhJGSOJIKK5usPF
+        Kt/REYCMt1vXSWt4NbgOWcHHDGB6JURmzz+5T9OZmZKr2u3MXEHG8mYbypp/o7F/FbL8ARFgBG8Nolbv
+        Yed9EZW8/oWn3SuQ5vVDcpk2cWIpyOoKdGSPv+adK/FOaF7+xKPOJUhz+whQzGPMEqAGGYBp88u5EgGq
+        ph94qLMQoAeSbG1HenjBTwDXhRsoGxZQ32pGVk5jWiJVGR0Ds/sYmNk7c71nqb5lHjVv5pB1U++XKNSf
+        nyvUE6Py3ImAQjVO13OU3TB54RBkykE6qg+Q5r+nDeujyr2U2sOSL+V0hbNyu77/BZAPEIjVLUT2AAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="buttonLoadTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAK9SURBVDhPfZHtS1NxFMfvX9OLzB4QjeiFBNIDBUIsLMt8
-        fqFJpElkiNsCH6JYiNMgIqk1RTcV00iNXkhEZuY2d52bjunU+bi53Xu3e7e7u/vtd+cQTfRwP9zf73C+
-        33MOP+qoKFX33yzT9q+Xa/tRph1AmUaBnPej7utIlR+OO1pjxO3xgOU4cGEBLCHARrGdRMDGDgPSBKny
-        w6F0YFgOdzXtUBvH9nje/Y101mGLEVDc0He8gdJZY/gCs5vFgCeCQa+IoRUJzb3fsREUUFhvPtqgRN0H
-        hhgoxcM+GcOriT2U3HqQx71nJlCO4Qyr9/MNcfk/lPECZNdbDUbU9HiSVHe5k6jqDVgL8Lj9tAfUhCEr
-        KssJADL5FHbP98l4frJnntaEWrPvAErORwxUtd2g6IHMkCwJiK7qEPG0IrLUCd5rRn5dL/whAZeKNUnB
-        fpScz88jt9oIar7rHJsQGSLWI+xuAzurRWCyEnaTCiujZfCOlBCK4P1aSCjA4mA+6JEi3ucXcP2hgRiY
-        MsU4v4EgrcfOdAs2xx+D3/wN1+IyxBiLuMgRyD/GEEKISwl4xopitMMlXa38GCATnBeT+yeiBB6QIpAl
-        Dr5VGxzTb2CffAXbLw2sP2phGX+A2bkpjOmzY5crOrdzKj5kU/P6rJgs8ZDYCcSDoxD9ZsQ23kFYeQl+
-        qR68uwoRVwHCjlxw9hxInBWW12eE1GtT1MTbrGiCjCgGhhDb/IToWjuE5UbwnieILJQjPJcHjr4G1nYR
-        zPRZxNmpgwbKRRaDRPwBUV8rBK+WiGsQmS8lYhXpegWs9QKYv6cR+nOCGEweNHC9SF/jQ3TI/bM7EV54
-        D26+A5xTB26uCSytBmuvAzNTA8ZaBcZSgaWZXpnWZYRScopyNqU9crac6qKbT25ZWtKFY2lOF2wt6Yyz
-        Ma1tV01R/wBED55mD2QamQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAK9SURBVDhPfZH/SxNxGMfvr+mHzL4gGtEPEkhfKBDCsCzz
+        2/xBk0iTyBC3BeqiMMRpEJHYUtFNxTRSox+kIDNzW54655hOnU7d3O5ud7fdbvfuc3OIJvpwL+7zeXje
+        7+d5+FBHRYm2/6ZG379Rqu+HRj8AjU6FnPej7WtLlh+OO/pO3uV2g+U4cGERLCHARrCdQIRvhwFpgmT5
+        4VA7MCyHu7pWaDvH9nje/ZV0bsIWI6Koru94A7WzzvQZFheLATePQY+EoVUZjb3f4AuKKKi1HG1QrO0D
+        QwzU4mGvguG1+B5qbiMo4N4zM6i54TSb59MNaeU/1PECZNdbdZ2o6nEnqOxyJcipNWE9IOD20x5QE6aM
+        iKLEASjkU9k93yfj+cmeuXozqi3eA6g5LzHIqe4GRQ+khxRZRGStCby7GfxyOwSPBXk1vfCHRFwq0iUE
+        +1FzXr+A7MpOUM6uc2xcYojYiLCrBeysHoHJcsyYc7A6qoFnpJhQCM+XAkI+lgbzQI8UCl6/iOsPTcTA
+        nC7FBB+CtBE70wZsjj+GsPkLC0srkKIsYhJHIP8oQwghJsfhHiuM0rMO+Wr5hwCZ4LyU2D8eIQiAzEOR
+        OXjX7JibfoOZyVew/9TB9r0a1vEHmJ2fwpgxM3q5rH07q6wjk3IaM6KKLEBmJxALjkLyWxD1vYO4+hLC
+        ci0EVwX4hXyE57LBzWRB5mywvj4jJl+boibeZkTiZEQpMITo5kdE1lshrtRDcD8Bv1iK8HwuOPoaWPtF
+        MNNnEWOnDhqoF0UKEnEHIt5miB49EVeBd5YQcQ7pegWs7QKYP6cR+n2CGEweNFh4kbouhOjQ4o/ueHjx
+        PThnGzhHE7j5BrC0FuxMDZi/VWBsFWCsZViy9yh0U1ooKacoR0PKI4fhVBfdeHLLakgVj6UxVbQbUhlH
+        fUrLrpqi/gE/FZ5fukX13AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="buttonBlankUnusedTiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIxSURBVDhPrZHfS1NhGMf3B3TfRXQRBxk5nUmUujZnPyQZ
-        gQQVQXfRdUjUTUQKRtQqKQpKQYidGmJSQWNYKRtSTd2conNznm1nc+7H2dnc2c6W50j17XWdmzEwgz5X
-        L8/7fZ7n+zyP6r+S9XZYeI8RGXc7uBk9ONcxpL/okJpqRdJ5FInJI1j/fBgxuzampFTjcxh/buWGIPOD
-        kNPPISWeYXPtCb6zAygzD8C7LoC1NYuKvBre095fCF7BFj+E0koXxKVTKHiNEKZ1KIceIue+DN94/Q9F
-        XgvnMMgy9xSbsWsQfZ0oeo9DIGOUQ2bkF3qIdQOxrqEUeTXctP5c3ncJcmYQJf9pFBdOQHAbIC5fhRjo
-        RcppAvvhkEmR18J9bSuVY32QkgMQF0+iMGdE3tVWsZ75dhFRm/a6Iq0l5dK3ZOe6IXMvSEcTCvOdEGY7
-        sEE2Xwrex+yw9leUbpBYWiNF6INSiFZLDF0n+WmKqxRIO3RccfUG6U7mj5ONRx9V5i4zZpQC91BcukOK
-        9kLw3EJ+5ibiti6s0FR59eX+P/tITLUK5MYSubFEbizFx5ulNbpJEgN3wdubkJ0grrx9SH48i/BIA4IW
-        ariSuBPR943ODU8Piov9JPk21u0mMK/3FcLWA3sVyc6w7zQV66nJ84iMasG8oh4rX38nNKaZT010I/np
-        DBgLldt11218o/V72LeNiLzRgLFSZiW8e8Jj6mX/iJrbLqSE/o2gta5Fee4Sleo3hDVxy9SbWWkAAAAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIxSURBVDhPrZHdS1NxGMf3B3TfRXQRBxk5nUmUujZnL5KM
+        QIKKoLvoOiTqJiIFI3KVFAWlFMRODTGpoDGslA2p5tqc4ubmPHt17uXsbO5sZyfPpPr2c52bMTCDPlc/
+        nt/3eZ7v8zyK/0rO02Xi3HpkXZ1gnVqwjiPIfNYgPdOOlP0wktOHsPbpIOJWdVxOqcVr0//czI+iwo2g
+        knkCKfkYG6sP8T06DJG5C85xDlFLqyDLa+HcnYPF4CVscqMoL/dA8J5A0aMHP6uBGLqHvOsifJONP2R5
+        PaxNV6mwj7ARvwLB142S5yh4MoYYMqKw0Ees64h1FSXLa2FntWcKvguoZEdQ9p9EaeEYeJcOwtJlCIF+
+        pO0GRN8fMMjyetgvHWUxPgApNQxh8TiKc3oUHB1V69mv5xGzqK/K0nrSDm1bbq4XFfYp6WhAcb4b/Lcu
+        rJPNl4NDcD5T/4rRTVKUVkkRer8UopUSQzdIfppiqwUyNg1bWrlGupP5E2TjsfvVuUXGiHLgDkreW6Ro
+        P3j3DRSc15Gw9GCZpsSVF3v/7CM5086TG0vkxhK5sZSYbJVW6RZJCNwGZ21Bboq48gwg9eE0wmNNCJqo
+        59XE7Yi9a7avu/tQWhwkyTexZjWAebWnGDbv2y1Ltif6VlW1np4+i8i4GsxL6oH89XdCE6r59FQvUh9P
+        gTFR+R133cI33rgr+qYZkdcqMGbKKId3TnhCueQfU7JbheTQvxE0N7TJzx2iUPwGfGVxyJEhHFkAAAAA
         SUVORK5CYII=
 </value>
   </data>
@@ -194,8 +200,23 @@
   <metadata name="UsedGlobal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>242, 17</value>
+  <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Index.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Solidity.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Foreground.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Used.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="UsedGlobal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <data name="buttonBlockNumbers.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -272,18 +293,18 @@
   <data name="buttonPasteFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ0SURBVDhPfZLdT1JxGMdd/0VbEy666qKLbrpOhBBKRDZD
-        VtQ5B5JTZjZHbc1FbZTs6CincGimyJQsbW7J21prbl3UWjMjX/CFlMo3bgLxAmrLb+f8wBfUerbP9tvO
-        8/08zznnV7JVPFV6zMNIsZdHFw6nCy0Hl+dS6Qk3JRkRm/utJ7GZCmNj/i5BPPsajhMRT0n9brpUV4jt
-        lIc5kmiz3dhcGr2Dxe5K/PkZQnrSShDPC11qJIINWAxc+eW5KNkoxHZKtC+N2rAwwmKuS4U4X464WyZQ
-        hrirDPOuU5ju0QrP68kmhdhOEcGbZnwdNiM+RGPumRGzA+eLiHmrMdNH/1vw4/VtzA9SmPUbEOvVkcBe
-        /iv4/uommTTTryeCqR4dnrdS8DlM8LWY0PuAgbeFxT2LCizLcnV1dZzZbOYoimKI4FukCbG+c/lwdxXG
-        H1fjRacVuVwOmUxmH+vr61heXv5tNBrtRJAINZI1p59UYdJTiTGXBoPtTaQxEokgHA5vEwqFCKLAYDDk
-        BYuBa5gSwhNCONqpxsf2MxhwNhJBMpkkrK2tbbO6ukoENTU1ecHCy6uY4M/iS4canx8q8aFNBX/rdSLY
-        PTUYDG4jCnQ6XV4QH2YR7VCR8KdWBd47TqPPUY90Ol00dTeiQKPRFARDFow78+GxFhne2cvhu28hgt1T
-        twgEAkSgVqsFAS15G/OLF8iM2acm4VfSiHpp9DutSKVS+yavrKwQREFFRYW9hGckKp6WjoubbOFijsLR
-        pEc2myVbHIQokMvl9sJ1Ki6bzXaotrb2ll6v54QPxWm1Wk54X05YmROmckqlklMoFJxMJrv8F85dZRvt
-        ZRaTAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbAy666qKLbrpOhBBKRDYC
+        VtQ5SEqZ2Ry1tRa1UbBDs5zy0kyRAVna3JK3tdbcuqi1ZmS+IEpK5QvcBOiF1Jbfzvnx5ls922f7bef5
+        fp7nnPOrKZeL4h1x6wXYzaNzB3Ollv3LfYF3zEnxx7hmv+k4trIRbCzcIXBnb/tRInJRgoCT5ilLsWq5
+        9YdSdvO1reXx21jqb8Cfn2Hkpk0E7rzYJ0Mq1I6l4KVf7vP8jVKsWpx9edyMxTEj5vukSLrqkHQKWWqR
+        dNRiwXECswMK9nkb2aQUqxYRvLmFr6MGJEdozD/TITF0dgdxTxPmfPS/BT9e38TCMIVEQIv4oJIEdvNf
+        wfdX18mkOb+aCGYGlHhup+C1NcNrbcbgfT08ViPutkphNBqZlpYWxmAwMBRF6YngW7QTcd+ZYri/EbHH
+        TXjRa0KhUMD6+voe8vk8VlZWfut0OgsRpMIdZM3ZJ42YdjdgwiHHcHcnaYxGo4hEIhXC4TCBE2i12qJg
+        KXgFM2x4ig1P9srwsfsUhro6iCCTyRDS6XSFtbU1IlCpVEXB4svLmHKdxpceGT4/lODDAykC9qtEsH1q
+        KBSqwAmUSmVRkBw1YrJHSsKf7GK8t52Ez9aGXC63Y+p2OIFcLi8JRloR6yqGJ6xCvLPUwXuvlQi2Ty0T
+        DAaJQCaTsQKa/zYe4C6QAYmnzeyvpDHpoeHvMiGbze6ZvLq6SuAE9fX1lhqXni910YIYt0kZh/4wbJ1q
+        bG5uki32gxOIRCJL6TrtLLPZfECj0dxQq9UM+6EYhULBsO/LsCsz7FRGIpEwYrGYEQqFF/8CytRlGvxi
+        IuIAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
